--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <h2>Ready to watch? Enter your email to create or restart your membership.</h2>
                 </div>
                 <div class="input-1">
-                    <input type="email" id="email" placeholder="Email address" pattern=".+@example\.com" size="30"
+                    <input type="email" placeholder="Email address" pattern=".+@example\.com" size="30"
                         required> <button>Get Started &gt;</button>
                 </div>
 
@@ -125,7 +125,7 @@
                 <h2>Ready to watch? Enter your email to create or restart your membership.</h2>
             </div>
             <div class="input-2">
-                <input type="email" id="email" placeholder="Email address" pattern=".+@example\.com" size="30" required>
+                <input type="email" placeholder="Email address" pattern=".+@example\.com" size="30" required>
                 <button>Get Started &gt;</button>
             </div>
         </div>
