--- a/sign-in.html
+++ b/sign-in.html
@@ -19,9 +19,9 @@
         <div class="inner-container">
             <div class="form">
                 <h1>Sign In</h1>
-                <input type="email" id="email" placeholder="Email or phone number" pattern=".+@example\.com" size="30"
+                <input type="email" placeholder="Email or phone number" pattern=".+@example\.com" size="30"
                     required> <br>
-                <input type="password" id="password" placeholder="Password" pattern=".+@example\.com" size="30"
+                <input type="password" placeholder="Password" pattern=".+@example\.com" size="30"
                     required> <br>
                 <button>Sign In</button>
                 <div class="remember">
