--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                     <h2>Ready to watch? Enter your email to create or restart your membership.</h2>
                 </div>
                 <div class="input-1">
-                    <input type="email" placeholder="Email address" pattern=".+@example\.com" size="30"
-                        required> <button>Get Started &gt;</button>
+                    <input type="name" placeholder="Email address" size="30"> 
+                    <button>Get Started &gt;</button>
                 </div>
 
             </div>
@@ -125,7 +125,7 @@
                 <h2>Ready to watch? Enter your email to create or restart your membership.</h2>
             </div>
             <div class="input-2">
-                <input type="email" placeholder="Email address" pattern=".+@example\.com" size="30" required>
+                <input type="name" placeholder="Email address" size="30">
                 <button>Get Started &gt;</button>
             </div>
         </div>
