--- a/sign-in.html
+++ b/sign-in.html
@@ -19,10 +19,8 @@
         <div class="inner-container">
             <div class="form">
                 <h1>Sign In</h1>
-                <input type="email" placeholder="Email or phone number" pattern=".+@example\.com" size="30"
-                    required> <br>
-                <input type="password" placeholder="Password" pattern=".+@example\.com" size="30"
-                    required> <br>
+                <input type="name" placeholder="Email or phone number" size="30"> <br>
+                <input type="name" placeholder="Password" size="30"> <br>
                 <button>Sign In</button>
                 <div class="remember">
                     <input type="checkbox" id="remember" name="remember">
