--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="P64aBrfRxnIG9CJ7tq-suxrK7YWisnL4mv-VJfuogCA" />
     <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
     <link rel="shortcut icon" href="https://cdn.icon-icons.com/icons2/2699/PNG/96/netflix_logo_icon_170919.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
